为作业批改系统实现知识库模块的全过程，包括目录树浏览、文件管理、共享知识库协作功能 用户可以创建个人知识库目录树，上传文件、管理文件夹；同时支持创建共享知识库，多人协作上传和管理文档。